--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ehsan Azizi</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Ehsan Azizi</h1>
+    <div class="container">
+        <h1>Ehsan Azizi</h1>
+        <h5>Welcome to my website</h5>
+    </div>
 </body>
 </html>
