--- a/index.html
+++ b/index.html
@@ -2,14 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ehsan Azizi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Ehsan Azizi - Software Developer</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
-        <h1>Ehsan Azizi</h1>
-        <h5>Welcome to my website</h5>
+        <header>
+            <div class="img">
+                <img src="images/photo.jpg" class="img" alt="photo">
+            </div>
+            <h1 class="name">
+                Ehsan Azizi</h1>
+            <h5 class="job">Software developer</h5>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Resume</a></li>
+                <li><a href="#">Hire Me</a></li>
+            </ul>
+        </nav>
+        <div class="flex-grow"></div>
+        <footer>
+            <div class="icons">
+                <a href="https://github.com/esanazizi/"><i class="fa fa-2x fa-fw fa-github"></i></a>
+                <a href="https://af.linkedin.com/in/ehsan-azizi-05b1a06b"><i class="fa fa-2x fa-fw fa-linkedin"></i></a>
+                <a href="https://stackoverflow.com/users/3709523/esnezz"><i class="fa fa-2x fa-fw fa-stack-overflow"></i></a>
+            </div>
+            <p>&copy; All rights reserved</p>
+        </footer>
     </div>
 </body>
 </html>
