--- a/index.html
+++ b/index.html
@@ -4,36 +4,154 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Ehsan Azizi - Software Developer</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="bootstrap.min.css"> -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <div class="img">
-                <img src="images/photo.jpg" class="img" alt="photo">
-            </div>
-            <h1 class="name">
-                Ehsan Azizi</h1>
-            <h5 class="job">Software developer</h5>
-        </header>
-        <nav>
-            <ul>
+    <header class="mb-5">
+        <nav class="navbar navbar-expand-lg navbar-light mx-5 my-4">
+            <a class="navbar-brand" href="#">Ehsan <span>Azizi</span></a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="ml-auto">
+                <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">Projects</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Hire Me</a></li>
-            </ul>
-        </nav>
-        <div class="flex-grow"></div>
-        <footer>
-            <div class="icons">
-                <a href="https://github.com/esanazizi/"><i class="fa fa-2x fa-fw fa-github"></i></a>
-                <a href="https://af.linkedin.com/in/ehsan-azizi-05b1a06b"><i class="fa fa-2x fa-fw fa-linkedin"></i></a>
-                <a href="https://stackoverflow.com/users/3709523/esnezz"><i class="fa fa-2x fa-fw fa-stack-overflow"></i></a>
+                <li><a href="#">Contact</a></li>
+              </ul>
             </div>
-            <p>&copy; All rights reserved</p>
-        </footer>
+          </nav>
+    </header>
+    <div class="container">
+        <div class="row main-info align-items-center">
+            <div class="col-lg-4 d-flex justify-content-center align-items-center">
+                <img src="images/photo.jpg" class="photo" alt="photo">
+            </div>
+            <div class="col-lg-7 d-flex flex-column ml-lg-3">
+                <h5 class="job text-center text-lg-left">Software developer</h5>
+                <h1 class="name text-center text-lg-left">Ehsan Azizi</h1>
+                <p class="mt-1 text-center text-lg-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sed praesentium a ea iure minus natus sint saepe eos, voluptatum cum, corrupti aut illum illo quisquam corporis dolores accusamus eveniet?</p>
+                <div class="mt-3 mx-auto mx-lg-0">
+                    <a href="#" class="btn btn-primary">Download Resume</a>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="container-fluid">
+        <div class="container">
+            <section class="service">
+                <h2>What I do</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <i class="fa fa-fw fa-desktop fa-3x"></i> 
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero commodi expedita est dicta beatae eveniet, veniam dolore minus aliquam voluptatem fugit corporis laudantium ipsum corrupti enim aperiam aliquid quis deserunt.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <i class="fa fa-fw fa-globe fa-3x"></i> 
+                                <h4>Web Development</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic maiores quas at nisi laboriosam dolore. Sapiente facere nemo voluptate? Ex ut voluptates dolor nisi aliquid iusto molestiae velit! Voluptatum, quidem.</p>
+                            </div>
+                        </div>
+                    </div>     
+                     <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <i class="fa fa-fw fa-mobile fa-3x"></i> 
+                                <h4>Desktop Development</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, error sit non consectetur ex laudantium, rem eaque qui hic corrupti quis possimus modi quia consequatur ipsa maxime facere fugiat fuga?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>               
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <i class="fa fa-fw fa-desktop fa-3x"></i> 
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero commodi expedita est dicta beatae eveniet, veniam dolore minus aliquam voluptatem fugit corporis laudantium ipsum corrupti enim aperiam aliquid quis deserunt.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <i class="fa fa-fw fa-globe fa-3x"></i> 
+                                <h4>Web Development</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic maiores quas at nisi laboriosam dolore. Sapiente facere nemo voluptate? Ex ut voluptates dolor nisi aliquid iusto molestiae velit! Voluptatum, quidem.</p>
+                            </div>
+                        </div>
+                    </div>     
+                     <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <i class="fa fa-fw fa-mobile fa-3x"></i> 
+                                <h4>Desktop Development</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, error sit non consectetur ex laudantium, rem eaque qui hic corrupti quis possimus modi quia consequatur ipsa maxime facere fugiat fuga?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>           
+            </section> 
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="container">
+            <section class="sersvice">
+                <h2>Projects</h2>
+                <div class="row">
+                    <div class="col-sm">
+                        <div class="card">
+                            <div class="card-body">
+                                <h4>Unic Accounting Desktop</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero commodi expedita est dicta beatae eveniet, veniam dolore minus aliquam voluptatem fugit corporis laudantium ipsum corrupti enim aperiam aliquid quis deserunt.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm">
+                        <div class="card">
+                            <div class="card-body">
+                                <h4>Unic Accounting Online</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero commodi expedita est dicta beatae eveniet, veniam dolore minus aliquam voluptatem fugit corporis laudantium ipsum corrupti enim aperiam aliquid quis deserunt.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>           
+            </section>
+        </div>
+    </div>   
+    
+    <div class="container-fluid">
+        <div class="container">
+            <section class="sersvice">
+                <h2>Contacts</h2>
+                <h4 class="mb-4"><i class="fa fa-fw fa-phone"></i> +93 795 95 89 89</h5>
+                <h4 class="mb-4"><i class="fa fa-fw fa-envelope"></i> ehsanazizi2007@yahoo.com</h5>
+                <h4 class="mb-4"><i class="fa fa-fw fa-map-pin"></i> Herat, Afghanistan</h4>
+            </section>
+        </div>
+    </div>
+
+   <div class="container">
+       <footer class="d-flex flex-column align-items-center">
+           <div class="icons">
+               <a href="https://github.com/esanazizi/"><i class="fa fa-2x fa-fw fa-github"></i></a>
+               <a href="https://af.linkedin.com/in/ehsan-azizi-05b1a06b"><i class="fa fa-2x fa-fw fa-linkedin"></i></a>
+               <a href="https://stackoverflow.com/users/3709523/esnezz"><i class="fa fa-2x fa-fw fa-stack-overflow"></i></a>
+           </div>
+           <p>&copy; All rights reserved</p>
+       </footer>
+   </div>
 </body>
 </html>
