--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <header class="mb-5">
         <nav class="navbar navbar-expand-lg navbar-light mx-5 my-4">
             <a class="navbar-brand" href="#">Ehsan <span>Azizi</span></a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="ml-auto">
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
-            </div>
+            </div> -->
           </nav>
     </header>
-    <div class="container">
+    <div class="container ">
         <div class="row main-info align-items-center">
             <div class="col-lg-4 d-flex justify-content-center align-items-center">
                 <img src="images/photo.jpg" class="photo" alt="photo">
@@ -31,14 +31,15 @@
             <div class="col-lg-7 d-flex flex-column ml-lg-3">
                 <h5 class="job text-center text-lg-left">Software developer</h5>
                 <h1 class="name text-center text-lg-left">Ehsan Azizi</h1>
-                <p class="mt-1 text-center text-lg-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sed praesentium a ea iure minus natus sint saepe eos, voluptatum cum, corrupti aut illum illo quisquam corporis dolores accusamus eveniet?</p>
+                <p class="mt-1 text-center text-lg-left">Over years I have designed and developed various software and websites for my clients by utilizing the latest and modern technologies, I am familiar with various technologies and languages such as Javascript, Typescript, Angular, React, NodeJs, C#, ASP.NET Core, Sql Server, My Sql</p>
                 <div class="mt-3 mx-auto mx-lg-0">
-                    <a href="#" class="btn btn-primary">Download Resume</a>
+                    <h4 class="mb-4 text-center text-lg-left"><i class="fa fa-fw fa-phone"></i> +93 795 95 89 89</h5>
+                    <h4 class="mb-4 text-center text-lg-left"><i class="fa fa-fw fa-envelope"></i> ehsanazizi2007@yahoo.com</h5>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
         <div class="container">
             <section class="service">
                 <h2>What I do</h2>
@@ -114,6 +115,7 @@
                             <div class="card-body">
                                 <h4>Unic Accounting Desktop</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero commodi expedita est dicta beatae eveniet, veniam dolore minus aliquam voluptatem fugit corporis laudantium ipsum corrupti enim aperiam aliquid quis deserunt.</p>
+                                <a href="http://www.unicaccounting.com">www.unicaccounting.com</a>
                             </div>
                         </div>
                     </div>
@@ -124,6 +126,7 @@
                             <div class="card-body">
                                 <h4>Unic Accounting Online</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero commodi expedita est dicta beatae eveniet, veniam dolore minus aliquam voluptatem fugit corporis laudantium ipsum corrupti enim aperiam aliquid quis deserunt.</p>
+                                <a href="http://www.unicaccounting.com/online">www.unicaccounting.com/online</a>
                             </div>
                         </div>
                     </div>
@@ -141,13 +144,13 @@
                 <h4 class="mb-4"><i class="fa fa-fw fa-map-pin"></i> Herat, Afghanistan</h4>
             </section>
         </div>
-    </div>
+    </div> -->
 
    <div class="container">
        <footer class="d-flex flex-column align-items-center">
            <div class="icons">
                <a href="https://github.com/esanazizi/"><i class="fa fa-2x fa-fw fa-github"></i></a>
-               <a href="https://af.linkedin.com/in/ehsan-azizi-05b1a06b"><i class="fa fa-2x fa-fw fa-linkedin"></i></a>
+               <a href="https://af.linkedin.com/in/ehsan-azizi"><i class="fa fa-2x fa-fw fa-linkedin"></i></a>
                <a href="https://stackoverflow.com/users/3709523/esnezz"><i class="fa fa-2x fa-fw fa-stack-overflow"></i></a>
            </div>
            <p>&copy; All rights reserved</p>
