--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="col-lg-7 d-flex flex-column ml-lg-3">
                 <h5 class="job text-center text-lg-left">Software developer</h5>
                 <h1 class="name text-center text-lg-left">Ehsan Azizi</h1>
-                <p class="mt-1 text-center text-lg-left">Over years I have designed and developed various software and websites for my clients by utilizing the latest and modern technologies, I am familiar with various technologies and languages such as Javascript, Typescript, Angular, React, NodeJs, C#, ASP.NET Core, Sql Server, My Sql</p>
+                <p class="mt-1 text-center text-lg-left">Over years I have designed and developed various software and websites for my clients by utilizing the latest and modern technologies, I am familiar with various technologies and languages such as Javascript, Typescript, Angular, React, NodeJs, C#, ASP.NET Core, Sql Server, My Sql etc..</p>
                 <div class="mt-3 mx-auto mx-lg-0">
                     <h4 class="mb-4 text-center text-lg-left"><i class="fa fa-fw fa-phone"></i> +93 795 95 89 89</h5>
                     <h4 class="mb-4 text-center text-lg-left"><i class="fa fa-fw fa-envelope"></i> ehsanazizi2007@yahoo.com</h5>
