--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Ehsan Azizi - Software Developer</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="bootstrap.min.css"> -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <header class="mb-5">
         <nav class="navbar navbar-expand-lg navbar-light mx-5 my-4">
@@ -21,7 +24,7 @@
                 <li><a href="#">Contact</a></li>
               </ul>
             </div> -->
-          </nav>
+        </nav>
     </header>
     <div class="container ">
         <div class="row main-info align-items-center">
@@ -31,10 +34,16 @@
             <div class="col-lg-7 d-flex flex-column ml-lg-3">
                 <h5 class="job text-center text-lg-left">Software developer</h5>
                 <h1 class="name text-center text-lg-left">Ehsan Azizi</h1>
-                <p class="mt-1 text-center text-lg-left">Over years I have designed and developed various software and websites for my clients by utilizing the latest and modern technologies, I am familiar with various technologies and languages such as Javascript, Typescript, Angular, React, NodeJs, C#, ASP.NET Core, Sql Server, My Sql etc..</p>
+                <p class="mt-1 text-center text-lg-left">Ehsan Azizi from Herat-Afghanistan, 
+                    is passionate software developer with over 8 years of experience in developing software under both web and Windows enviornments.
+                    He is the founder and developer of Unic Accounting, 
+                    a popular accounting software for small and medium-sized businesses.
+                     He enjoys working with various technologies and languages such as Javascript, Typescript,
+                      Angular, React, NodeJs, C#, ASP.NET Core, Sql Server, My Sql.</p>
                 <div class="mt-3 mx-auto mx-lg-0">
                     <h4 class="mb-4 text-center text-lg-left"><i class="fa fa-fw fa-phone"></i> +93 795 95 89 89</h5>
-                    <h4 class="mb-4 text-center text-lg-left"><i class="fa fa-fw fa-envelope"></i> ehsanazizi2007@yahoo.com</h5>
+                        <h4 class="mb-4 text-center text-lg-left"><i class="fa fa-fw fa-envelope"></i>
+                            ehsanazizi2007@yahoo.com</h5>
                 </div>
             </div>
         </div>
@@ -146,15 +155,17 @@
         </div>
     </div> -->
 
-   <div class="container">
-       <footer class="d-flex flex-column align-items-center">
-           <div class="icons">
-               <a href="https://github.com/esanazizi/"><i class="fa fa-2x fa-fw fa-github"></i></a>
-               <a href="https://af.linkedin.com/in/ehsan-azizi"><i class="fa fa-2x fa-fw fa-linkedin"></i></a>
-               <a href="https://stackoverflow.com/users/3709523/esnezz"><i class="fa fa-2x fa-fw fa-stack-overflow"></i></a>
-           </div>
-           <p>&copy; All rights reserved</p>
-       </footer>
-   </div>
+    <div class="container">
+        <footer class="d-flex flex-column align-items-center">
+            <div class="icons">
+                <a href="https://github.com/esanazizi/"><i class="fa fa-2x fa-fw fa-github"></i></a>
+                <a href="https://af.linkedin.com/in/ehsan-azizi"><i class="fa fa-2x fa-fw fa-linkedin"></i></a>
+                <a href="https://stackoverflow.com/users/3709523/esnezz"><i
+                        class="fa fa-2x fa-fw fa-stack-overflow"></i></a>
+            </div>
+            <p>&copy; All rights reserved</p>
+        </footer>
+    </div>
 </body>
+
 </html>
