--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     He is the founder and developer of Unic Accounting, 
                     a popular accounting software for small and medium-sized businesses.
                      He enjoys working with various technologies and languages such as Javascript, Typescript,
-                      Angular, React, NodeJs, C#, ASP.NET Core, Sql Server, My Sql.</p>
+                      Angular, React, NodeJs, C#, ASP.NET Core.</p>
                 <div class="mt-3 mx-auto mx-lg-0">
                     <h4 class="mb-4 text-center text-lg-left"><i class="fa fa-fw fa-phone"></i> +93 795 95 89 89</h5>
                         <h4 class="mb-4 text-center text-lg-left"><i class="fa fa-fw fa-envelope"></i>
