--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
           <a href="#" class="title">Ehsan <span>Azizi</span></a>
           <ul>
-            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#home" class="active">Home</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -22,7 +22,7 @@
         </nav>
       </div>
     </header>
-    <div class="jumbotron">
+    <div class="sec jumbotron" id="home">
       <div class="container">
         <h1>Ehsan Azizi</h1>
         <h2>Software developer</h2>
@@ -55,7 +55,8 @@
         </div>
       </div>
     </div>
-    <div class="section bg" id="portfolio">
+
+    <div class="sec section bg" id="portfolio">
       <div class="container">
         <div class="title">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
@@ -117,7 +118,7 @@
         </div>
       </div>
     </div>
-    <div class="section" id="skills">
+    <div class="sec section" id="skills">
       <div class="container">
         <div class="skills">
           <div class="title">
@@ -187,7 +188,7 @@
         </div>
       </div>
     </div>
-    <div class="section bg" id="contact">
+    <div class="sec section bg" id="contact">
       <div class="container">
         <div class="title">
           <svg xmlns="http://www.w3.org/2000/svg" width="22" height="18" viewBox="0 0 22 18">
@@ -209,7 +210,7 @@
         <p>
           Feel free contact me if you have any question or inquery, I would be happy to hear from you.
         </p>
-        <a href="mailto:ehsan-azizi@live.com"> Email: ehsan-azizi@live.com</a>
+        <a href="mailto:ehsan@unicaccounting.com"> Email: ehsan@unicaccounting.com</a>
       </div>
     </div>
     <footer>
@@ -217,5 +218,6 @@
         <p>&copy; All rights reserved</p>
       </div>
     </footer>
+    <script src="scrollspy.js"></script>
   </body>
 </html>
