--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             Contact
           </div>
           <p>
-            Feel free contact me if you have any question or inquery by filling out the form below, I would be happy to hear from you.
+            Feel free contact me if you have any question or inquiry by filling out the form below, I would be happy to hear from you.
           </p>
           <form id="my-form" action="https://formspree.io/meqlbbkk" method="POST">
             <div class="form-group">
