--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               The website is built to provide with the latest information and stats regarding Coronavirus pandemic, The frontend of the website is
               created using React library and website consume data from REST API provided by third party.
             </p>
-            <a href="https://corona-virus-stats.netlify.com">corona-virus-stats.netlify.com/</a>
+            <a href="https://corona-virus-stats.netlify.com">corona-virus-stats.netlify.com</a>
             <a href="https://github.com/esanazizi/coronavirus-stats">github.com/esanazizi/coronavirus-stats</a>
           </div>
         </div>
