improvements to navbar

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
       <div class="container">
         <nav>
           <a href="#" class="title">Ehsan <span>Azizi</span></a>
-          <ul>
+          <ul class="nav-menu">
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
+            <span class="bar"></span>
           </ul>
         </nav>
       </div>
