--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <p>&copy; All rights reserved</p>
       </div>
     </footer>
-    <script src="scrollspy.js"></script>
+    <script src="nav.js"></script>
     <script>
       window.addEventListener('DOMContentLoaded', function () {
         // get the form elements defined in your form HTML above
