fixed github profile link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           technologies and languages such as Javascript, Typescript, Angular, React, NodeJs, C#, ASP.NET Core.
         </p>
         <div class="links">
-          <a href="https://github.com/esanazizi/"
+          <a href="https://github.com/esnz/"
             ><svg xmlns="http://www.w3.org/2000/svg" width="26.657" height="26" viewBox="0 0 26.657 26">
               <path
                 d="M17.328,4a13.33,13.33,0,0,0-4.213,25.976c.668.122.911-.286.911-.642,0-.317-.013-1.154-.017-2.265-3.71.8-4.491-1.787-4.491-1.787a3.55,3.55,0,0,0-1.479-1.952c-1.21-.824.091-.807.091-.807a2.8,2.8,0,0,1,2.039,1.371A2.84,2.84,0,0,0,14.048,25a2.868,2.868,0,0,1,.846-1.783c-2.959-.334-6.07-1.479-6.07-6.586A5.166,5.166,0,0,1,10.2,13.055a4.808,4.808,0,0,1,.13-3.527s1.119-.356,3.666,1.367a12.679,12.679,0,0,1,6.673,0c2.547-1.722,3.662-1.367,3.662-1.367a4.771,4.771,0,0,1,.135,3.527,5.143,5.143,0,0,1,1.367,3.579c0,5.12-3.115,6.243-6.083,6.577a3.174,3.174,0,0,1,.9,2.464c0,1.783-.013,3.219-.013,3.658,0,.356.239.772.915.642A13.331,13.331,0,0,0,17.328,4Z"
@@ -87,7 +87,7 @@
               created using React library and website consume data from REST API provided by third party.
             </p>
             <a href="https://corona-virus-stats.netlify.com">corona-virus-stats.netlify.com</a>
-            <a href="https://github.com/esanazizi/coronavirus-stats">github.com/esanazizi/coronavirus-stats</a>
+            <a href="https://github.com/esnz/coronavirus-stats">github.com/esnz/coronavirus-stats</a>
           </div>
         </div>
         <div class="portfolio blue">
