--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <p>2020</p>
             </div>
             <p>
-              The website is built to provide with the latest information and stats regarding Coronavirus pandemic, The frontend of the website is
+              The website is built to provide with the lat`t information and stats regarding Coronavirus pandemic, The frontend of the website is
               created using React library and website consume data from REST API provided by third party.
             </p>
             <a href="https://corona-virus-stats.netlify.com">corona-virus-stats.netlify.com</a>
