added new projects and other improvements

--- a/index.html
+++ b/index.html
@@ -76,35 +76,67 @@
           </svg>
           Portfolio
         </div>
+        <div class="portfolio blue">
+          <img src="./images/chatapp.png" alt="ChatApp" />
+          <div class="info">
+            <div class="name">
+              <h6>ChatApp</h6>
+              <p>2020</p>
+            </div>
+            <p>
+              Realtime chat application built with React and Firebase with Facebook Authentication
+            </p>
+            <a href="https://github.com/esnz/chatapp">github.com/esnz/chatapp</a>
+            <div class="tags"><span>React</span><span>Firebase</span><span>OAuth</span></div>
+          </div>
+        </div>
+        <div class="portfolio blue">
+          <img src="./images/jobber.png" alt="Jobber" />
+          <div class="info">
+            <div class="name">
+              <h6>Jobber</h6>
+              <p>2020</p>
+            </div>
+            <p>
+              A Mobile app for fetching latest jobs post from Github Jobs API, built with Flutter &amp; Dart
+            </p>
+            <a href="https://github.com/esnz/chatapp">github.com/esnz/jobber</a>
+            <div class="tags"><span>Flutter</span><span>Dart</span></div>
+          </div>
+        </div>
         <div class="portfolio pink">
+          <img src="./images/coronavirusstats.png" alt="Coronavirus Stats" />
           <div class="info">
             <div class="name">
               <h6>Coronavirus Stats</h6>
               <p>2020</p>
             </div>
             <p>
-              The website is built to provide with the lat`t information and stats regarding Coronavirus pandemic, The frontend of the website is
-              created using React library and website consume data from REST API provided by third party.
+              The website is built to provide with the latest information and stats regarding Coronavirus pandemic.
             </p>
             <a href="https://corona-virus-stats.netlify.com">corona-virus-stats.netlify.com</a>
             <a href="https://github.com/esnz/coronavirus-stats">github.com/esnz/coronavirus-stats</a>
+            <div class="tags"><span>React</span><span>WEBAPI</span><span>SASS</span></div>
           </div>
         </div>
         <div class="portfolio blue">
+          <img src="./images/uniconline.png" alt="Unic Accounting Online" />
           <div class="info">
             <div class="name">
               <h6>Unic Accounting Online</h6>
               <p>2019</p>
             </div>
             <p>
-              This project is the online version of my popular accounting software, The backend of the website is built using Microsoft Asp.Net Core,
-              EntityFramework and SQL Server, And Angular is used for building the frontend part of the website.
+              This project is the online version of my popular accounting software, The backend of the website is built using .Net Core,
+              EntityFramework and SQL Server, also the frontend is built using Angular.
             </p>
             <a href="http://www.unicaccounting.com">unicaccounting.com/online</a>
+            <div class="tags"><span>Angular</span><span>.NET Core</span></div>
           </div>
         </div>
 
         <div class="portfolio orange">
+          <img src="./images/unic.png" alt="Unic Accounting" />
           <div class="info">
             <div class="name">
               <h6>Unic Accounting</h6>
@@ -115,6 +147,7 @@
               their accounting requirements. The software is a desktop app and is build with .NETFramework / Winforms.
             </p>
             <a href="http://www.unicaccounting.com">unicaccounting.com</a>
+            <div class="tags"><span>C#</span><span>Winforms</span><span>EntityFramework</span><span>SQL Server</span></div>
           </div>
         </div>
       </div>
@@ -182,6 +215,7 @@
           <h5>Other Skills</h5>
           <p><span>Language:</span> C#, Typescript</p>
           <p><span>Web Design:</span> HTML, CSS, SASS, Bootstrap</p>
+          <p><span>Mobile Developement:</span> Flutter, React Native</p>
           <p><span>Database:</span> SQL Server, MySQL, MongboDB, Firebase</p>
           <p><span>DevOps:</span> Docker, CI/CD</p>
           <p><span>Tools:</span> Git, GitHub, NPM, VS Code</p>
