--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
 
         <div class="portfolio orange">
-          <img src="./images/unic.png" alt="Unic Accounting" />
+          <img src="./images/unicaccounting.png" alt="Unic Accounting" />
           <div class="info">
             <div class="name">
               <h6>Unic Accounting</h6>
