--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </svg>
           Portfolio
         </div>
-        <div class="portfolio blue">
+        <div class="portfolio orange">
           <img src="./images/chatapp.png" alt="ChatApp" />
           <div class="info">
             <div class="name">
