--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
           Portfolio
         </div>
         <div class="portfolio orange">
+          <img src="./images/reactweather.png" alt="ReactWeather" />
+          <div class="info">
+            <div class="name">
+              <h6>ReactWeather App</h6>
+              <p>2020</p>
+            </div>
+            <p>
+              A weather application built with React that shows the weather forecast for any city or place around the world by consuming
+              OpenWeatherMap API.
+            </p>
+            <a href="https://esnz-reactweather.netlify.app/">esnz-reactweather.netlify.app</a>
+            <a href="https://github.com/esnz/reactweather">github.com/esnz/reactweather</a>
+            <div class="tags"><span>React</span><span>Redux</span><span>Typescript</span><span>StyledComponents</span></div>
+          </div>
+        </div>
+        <div class="portfolio orange">
           <img src="./images/chatapp.png" alt="ChatApp" />
           <div class="info">
             <div class="name">
@@ -84,10 +100,10 @@
               <p>2020</p>
             </div>
             <p>
-              Realtime chat application built with React and Firebase with Facebook Authentication
+              Realtime chat application built with React and Firebase with Facebook Authentication.
             </p>
             <a href="https://github.com/esnz/chatapp">github.com/esnz/chatapp</a>
-            <div class="tags"><span>React</span><span>Firebase</span><span>OAuth</span></div>
+            <div class="tags"><span>React</span><span>MobX</span><span>Firebase</span><span>OAuth</span></div>
           </div>
         </div>
         <div class="portfolio blue">
@@ -98,7 +114,7 @@
               <p>2020</p>
             </div>
             <p>
-              A Mobile app for fetching latest jobs post from Github Jobs API, built with Flutter &amp; Dart
+              A Mobile app for fetching latest jobs post from Github Jobs API, built with Flutter &amp; Dart.
             </p>
             <a href="https://github.com/esnz/chatapp">github.com/esnz/jobber</a>
             <div class="tags"><span>Flutter</span><span>Dart</span></div>
@@ -181,15 +197,15 @@
           </div>
           <h6>Frontend</h6>
           <div class="skill">
-            <p>Angular</p>
-            <div class="bar">
-              <div class="progress angular"></div>
-            </div>
-          </div>
-          <div class="skill">
             <p>React</p>
             <div class="bar">
               <div class="progress react"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <p>Angular</p>
+            <div class="bar">
+              <div class="progress angular"></div>
             </div>
           </div>
           <div class="skill">
