--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>
           I am passionate software developer with over 8 years of experience in developing software under both web and Windows environments. I am the
           founder and developer of Unic Accounting, a popular accounting software for small and medium-sized businesses. I enjoy working with various
-          technologies and languages such as Javascript, Typescript, Angular, React, NodeJs, C#, ASP.NET Core.
+          technologies and languages such as Javascript, TypeScript, Angular, React, NodeJs, C#, ASP.NET Core.
         </p>
         <div class="links">
           <a href="https://github.com/esnz/"
@@ -89,7 +89,7 @@
             </p>
             <a href="https://esnz-reactweather.netlify.app/">esnz-reactweather.netlify.app</a>
             <a href="https://github.com/esnz/reactweather">github.com/esnz/reactweather</a>
-            <div class="tags"><span>React</span><span>Redux</span><span>Typescript</span><span>StyledComponents</span></div>
+            <div class="tags"><span>React</span><span>Redux</span><span>TypeScript</span><span>StyledComponents</span></div>
           </div>
         </div>
         <div class="portfolio orange">
@@ -99,9 +99,7 @@
               <h6>ChatApp</h6>
               <p>2020</p>
             </div>
-            <p>
-              Realtime chat application built with React and Firebase with Facebook Authentication.
-            </p>
+            <p>Realtime chat application built with React and Firebase with Facebook Authentication.</p>
             <a href="https://github.com/esnz/chatapp">github.com/esnz/chatapp</a>
             <div class="tags"><span>React</span><span>MobX</span><span>Firebase</span><span>OAuth</span></div>
           </div>
@@ -113,10 +111,8 @@
               <h6>Jobber</h6>
               <p>2020</p>
             </div>
-            <p>
-              A Mobile app for fetching latest jobs post from Github Jobs API, built with Flutter &amp; Dart.
-            </p>
-            <a href="https://github.com/esnz/chatapp">github.com/esnz/jobber</a>
+            <p>A Mobile app for fetching latest jobs post from Github Jobs API, built with Flutter &amp; Dart.</p>
+            <a href="https://github.com/esnz/jobber">github.com/esnz/jobber</a>
             <div class="tags"><span>Flutter</span><span>Dart</span></div>
           </div>
         </div>
@@ -127,9 +123,7 @@
               <h6>Coronavirus Stats</h6>
               <p>2020</p>
             </div>
-            <p>
-              The website is built to provide with the latest information and stats regarding Coronavirus pandemic.
-            </p>
+            <p>The website is built to provide with the latest information and stats regarding Coronavirus pandemic.</p>
             <a href="https://corona-virus-stats.netlify.com">corona-virus-stats.netlify.com</a>
             <a href="https://github.com/esnz/coronavirus-stats">github.com/esnz/coronavirus-stats</a>
             <div class="tags"><span>React</span><span>WEBAPI</span><span>SASS</span></div>
@@ -229,11 +223,11 @@
           </div>
 
           <h5>Other Skills</h5>
-          <p><span>Language:</span> C#, Typescript</p>
+          <p><span>Language:</span> C#, TypeScript</p>
           <p><span>Web Design:</span> HTML, CSS, SASS, Bootstrap</p>
           <p><span>Mobile Developement:</span> Flutter, React Native</p>
           <p><span>Database:</span> SQL Server, MySQL, MongboDB, Firebase</p>
-          <p><span>DevOps:</span> Docker, CI/CD</p>
+          <p><span>DevOps:</span> Docker, CI/CD with GitHub Actions</p>
           <p><span>Tools:</span> Git, GitHub, NPM, VS Code</p>
           <p><span>UI/UX:</span> Adobe XD, Figma</p>
         </div>
@@ -259,9 +253,7 @@
             </svg>
             Contact
           </div>
-          <p>
-            Feel free contact me if you have any question or inquiry by filling out the form below, I would be happy to hear from you.
-          </p>
+          <p>Feel free contact me if you have any question or inquiry by filling out the form below, I would be happy to hear from you.</p>
           <form id="my-form" action="https://formspree.io/meqlbbkk" method="POST">
             <div class="form-group">
               <label>Email:</label>
