fixed a grammatical problem

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <h1>Ehsan Azizi</h1>
         <h2>Software developer</h2>
         <p>
-          I am passionate software developer with over 8 years of experience in developing software under both web and Windows environments. I am the
-          founder and developer of Unic Accounting, a popular accounting software for small and medium-sized businesses. I enjoy working with various
-          technologies and languages such as Javascript, TypeScript, Angular, React, NodeJs, C#, ASP.NET Core.
+          I am a passionate software developer with over 8 years of experience in developing software under both web and Windows environments. I am
+          the founder and developer of Unic Accounting, a popular accounting software for small and medium-sized businesses. I enjoy working with
+          various technologies and languages such as Javascript, TypeScript, Angular, React, NodeJs, C#, ASP.NET Core.
         </p>
         <div class="links">
           <a href="https://github.com/esnz/"
